Fixed header wrap issue (minor)

--- a/style.css
+++ b/style.css
@@ -93,13 +93,20 @@ input, button, select, option, textarea {
 */
 .header {
     display: flex;
-    justify-content: space-between;
+    flex-flow: row wrap;
+    /*justify-content: space-between;*/
     padding-top: 8px;
     padding-bottom: 8px;
 }
 
 .header-logo {
+    display: flex;
     flex-grow: 1;
+}
+
+.header-links {
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .content {
